@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.linux.nm"
        name="Network-Manager"
-       version="0.1.2"
+       version="0.1.3"
        provider-name="vikjon0">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
@@ -9,6 +9,7 @@
   <extension point="xbmc.python.script"
              library="default.py" />
   <extension point="xbmc.addon.metadata">
+  	<language>en</language>
     <platform>linux</platform>
     <summary lang="en">xbmc Network-Manager front-end. Configures wifi from within xbmc.</summary>
     <description lang="en">xbmc Network-Manager front-end. Configures wifi from within xbmc. Requires Network-Manager 0.9, which are included in XBMCbuntu.</description>
