@@ -1,3 +1,12 @@
+[B]Version 0.1.3[/B]
+Check number of wifi devices on init
+Access Points sorted by strength
+language tag added
+Error handling/messages tuned
+Possibility to enable ipv6 in settings. disabled default.
+Double connection when incorrect key fixed
+Prompt for key if needed when connecting to existing connection
+
 [B]Version 0.1.2[/B]
 Script id changed to standard format
 
